# histogram-equalizer

./: .gitignore  .gitmodules  README.md
report/: project_report.bib  project_report.out  project_report.tex
src/common/: arguments.c  arguments.h  defines.h  equalizer.c  equalizer.h  errors.h  hsl.c  hsl.cu  hsl.cuh  hsl.h  log.c  log.h  stopwatch.c  stopwatch.h  utils.h
src/parallel-cuda/: equalizer.cu  equalizer.cuh  error_checker.cuh  main.cu  meson.build
src/parallel-openmp/: main.c  meson.build
src/sequential/: main.c  meson.build
src/test/: meson.build  test.c  test_hsl.h
utils/: runner.sh  test-openmp.sh  verifier.sh
